# agentic-design-workflow

./: .gitignore  DVCP.md  NOTAS.md  README.md  TODO.md  langgraph.json  pyproject.toml
scripts/: test_penpot_export_shape.py  validadorPaylodConsumo.sh  validadorSdk.sh
snippets/: graph_fix_design_snippet.py
src/agent/: graph.py
src/agent/utils/: fixer_prompt.py  llm_control.py  mistral_vision.py  mistral_vision_runnable.py  penpot_image_export.py  resource_loader.py  stitch_external_design.py  stitch_import_queue.py  stitch_llm_memory.py  stitch_llm_planner.py  stitch_mcp_client.py
src/agent/utils/agents/: design_validator.py
src/agent/utils/js/: penpot_apply_canvas_fix_plan.js  penpot_apply_import_op.js  penpot_apply_rename_plan.js  penpot_apply_semantic_fix_plan.js  penpot_import_external_design_spec.js  penpot_read_structure.js  penpot_verify_rename_plan.js
src/agent/utils/json/: auto_fix_constraints.json
src/agent/utils/json/schemas/: validator_delta_contract.json  validator_report_contract.json
src/agent/utils/skills/: builder.md  design_validator.md  fixer.md  validator.md
src/agent/utils/tool_policies/: penpot_read_tools.md  penpot_write_tools.md
